--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -156,6 +156,12 @@
         left: 3px
       &_next
         right: 3px
+  .packages
+    &__title
+      font-size: 30px
+
+      line-height: 38px
+      margin-bottom: 50px
   .activities
     padding-bottom: 50px
     &__card
@@ -327,9 +333,6 @@
         min-height: 530px
 @media   ( max-width: 600px )
   .packages
-    &__title
-      font-size: 30px
-      margin-bottom: 40px
     &__wrapper
       grid-template-columns: 1fr
       grid-template-rows: repeat (5, 1fr )
@@ -505,6 +508,10 @@
       font-size: 18px
       line-height: 23px
   .packages
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 50px
     &-card
       &-main
         &__wrapper
